01-secure-cluster/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  labels:
    app: webapp
  namespace: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp
      containers:
      - image: IMAGE_NAME
        name: webapp
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        ports:
        - containerPort: 8080
          protocol: TCP
