01-secure-cluster/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: webapp
spec:
  # select all pods
  podSelector:
    matchLabels: {}
  # block ingress and egress
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp
  namespace: webapp
spec:
  egress:
  - {}
  ingress:
  - from:
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  - Egress
